Parse out the Baseline-Enable-Preview manifest field